--- a/index.html
+++ b/index.html
@@ -98,61 +98,64 @@
                 </svg>
             </div>
         </section>
-        <section class="services container"
+        <section class="services"
             id="services">
-            <h2 class="services-title">Areas of Practice</h2>
-            <p class="services-caption">Our disciplined approach to resolving your legal issues will produce the
-                best-possible outcome.</p>
-            <ul class="services-list">
-                <li class="services-item">
-                    <svg class="services-item-icon"
-                        width="64"
-                        height="64">
-                        <use href="./images/svg-sprite.svg#icon-internet"></use>
-                    </svg>
-                    <h3 class="services-item-caption">Intellectual Property</h3>
-                    <p class="services-item-text">Intellectual Property law deals with laws to protect creators and
-                        owners of inventions, writing, music, designs and other works.</p>
-                    <a class="services-item-link"
-                        href="#request">Learn More<svg class="services-item-link-icon"
-                            width="19"
-                            height="14">
-                            <use href="./images/svg-sprite.svg#icon-arrow"></use>
-                        </svg></a>
-                </li>
-                <li class="services-item">
-                    <svg class="services-item-icon"
-                        width="64"
-                        height="64">
-                        <use href="./images/svg-sprite.svg#icon-building"></use>
-                    </svg>
-                    <h3 class="services-item-caption">Real Estate</h3>
-                    <p class="services-item-text">Real estate law is a branch of civil law that covers the right to
-                        possess, use, and enjoy land.</p>
-                    <a class="services-item-link"
-                        href="#request">Learn More<svg class="services-item-link-icon"
-                            width="19"
-                            height="14">
-                            <use href="./images/svg-sprite.svg#icon-arrow"></use>
-                        </svg></a>
-                </li>
-                <li class="services-item">
-                    <svg class="services-item-icon"
-                        width="64"
-                        height="64">
-                        <use href="./images/svg-sprite.svg#icon-checkbill"></use>
-                    </svg>
-                    <h3 class="services-item-caption">Tax Law</h3>
-                    <p class="services-item-text">Tax law cover income, corporate, excise, luxury, estate and property
-                        taxes, to name a few.</p>
-                    <a class="services-item-link"
-                        href="#request">Learn More<svg class="services-item-link-icon"
-                            width="19"
-                            height="14">
-                            <use href="./images/svg-sprite.svg#icon-arrow"></use>
-                        </svg></a>
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="services-title">Areas of Practice</h2>
+                <p class="services-caption">Our disciplined approach to resolving your legal issues will produce the
+                    best-possible outcome.</p>
+                <ul class="services-list">
+                    <li class="services-item">
+                        <svg class="services-item-icon"
+                            width="64"
+                            height="64">
+                            <use href="./images/svg-sprite.svg#icon-internet"></use>
+                        </svg>
+                        <h3 class="services-item-caption">Intellectual Property</h3>
+                        <p class="services-item-text">Intellectual Property law deals with laws to protect creators and
+                            owners of inventions, writing, music, designs and other works.</p>
+                        <a class="services-item-link"
+                            href="#request">Learn More<svg class="services-item-link-icon"
+                                width="19"
+                                height="14">
+                                <use href="./images/svg-sprite.svg#icon-arrow"></use>
+                            </svg></a>
+                    </li>
+                    <li class="services-item">
+                        <svg class="services-item-icon"
+                            width="64"
+                            height="64">
+                            <use href="./images/svg-sprite.svg#icon-building"></use>
+                        </svg>
+                        <h3 class="services-item-caption">Real Estate</h3>
+                        <p class="services-item-text">Real estate law is a branch of civil law that covers the right to
+                            possess, use, and enjoy land.</p>
+                        <a class="services-item-link"
+                            href="#request">Learn More<svg class="services-item-link-icon"
+                                width="19"
+                                height="14">
+                                <use href="./images/svg-sprite.svg#icon-arrow"></use>
+                            </svg></a>
+                    </li>
+                    <li class="services-item">
+                        <svg class="services-item-icon"
+                            width="64"
+                            height="64">
+                            <use href="./images/svg-sprite.svg#icon-checkbill"></use>
+                        </svg>
+                        <h3 class="services-item-caption">Tax Law</h3>
+                        <p class="services-item-text">Tax law cover income, corporate, excise, luxury, estate and
+                            property
+                            taxes, to name a few.</p>
+                        <a class="services-item-link"
+                            href="#request">Learn More<svg class="services-item-link-icon"
+                                width="19"
+                                height="14">
+                                <use href="./images/svg-sprite.svg#icon-arrow"></use>
+                            </svg></a>
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="about container"
             id="about">
@@ -254,7 +257,7 @@
         </section>
     </main>
     <footer class="main-footer">
-        <div class="footer-wrapper container">
+        <div class="container footer-wrapper">
             <a class="footer-logo"
                 href="/">
                 <svg class="footer-logo-icon"
